vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__architecture__tests__architecture_missing_begin.snap
---
source: vhdl_syntax/src/parser/productions/architecture.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
architecture rtl of myent is
end;

== tree ==
ArchitectureBody
  ArchitecturePreamble
    Keyword(Architecture)
    Identifier 'rtl'
    Keyword(Of)
    Name
      NameDesignatorPrefix
        Identifier 'myent'
    Keyword(Is)
  ArchitectureEpilogue
    Keyword(End)
    SemiColon

== diagnostics ==
1:29 Expected(Node([DeclarationStatementSeparator]))
