vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__architecture__tests__architecture_missing_is.snap
---
source: vhdl_syntax/src/parser/productions/architecture.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
architecture rtl of myent
begin
end;

== tree ==
ArchitectureBody
  ArchitecturePreamble
    Keyword(Architecture)
    Identifier 'rtl'
    Keyword(Of)
    Name
      NameDesignatorPrefix
        Identifier 'myent'
  DeclarationStatementSeparator
    Keyword(Begin)
  ArchitectureEpilogue
    Keyword(End)
    SemiColon

== diagnostics ==
1:26 Expected([Token(Keyword(Is))])
