vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__architecture__tests__parse_architecture_body_end.snap
---
source: vhdl_syntax/src/parser/productions/architecture.rs
expression: "to_test_text(Parser::architecture,\n\"\\\narchitecture arch_name of myent is\nbegin\nend;\")"
---
ArchitectureBody
  ArchitecturePreamble
    Keyword(Architecture)
    Identifier 'arch_name'
    Keyword(Of)
    Name
      Identifier 'myent'
    Keyword(Is)
  Keyword(Begin)
  ArchitectureEpilogue
    Keyword(End)
    SemiColon
